--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "express": "4.17.1",
-    "express-handlebars": "3.1.0"
+    "express-handlebars": "3.1.0",
+    "file-system": "^2.2.2",
+    "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
+    "fs-extra": "^9.0.1"
   },
   "name": "express",
   "version": "1.0.0",
